tests/expectations/compiler/finalize/rand_not_in_finalize.out
Error [ETYC0372067]: This operation can only be used in an async function or script.
    --> compiler-test:7:25
     |
   7 |         let a: scalar = ChaCha::rand_scalar();
     |                         ^^^^^^^^^^^^^^^^^^^^^
